POWR-800 Adjust path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,11 +173,10 @@ behat_tests: &behat_tests
               echo "Creating new multidev site. This may take a few seconds."
               terminus multidev:create portlandor.test $CIRCLE_BRANCH
               # Use environment varialbes to set the secrets and add to git.
-              cd /var/www/html/private
-              echo $SENDGRID_API_KEY > sendgrid_api.key
-              echo $SOLR_CORE > ./solr-config/solr_core.key
-              echo $SOLR_HOST > ./solr-config/solr_host.key
-              echo $SOLR_CSOLR_PASSWORDORE > ./solr-config/solr_password.key
+              echo $SENDGRID_API_KEY > private/sendgrid_api.key
+              echo $SOLR_CORE > private/solr-config/solr_core.key
+              echo $SOLR_HOST > private/solr-config/solr_host.key
+              echo $SOLR_CSOLR_PASSWORDORE > private/solr-config/solr_password.key
               echo $SOLR_USERNAME > ./solr-config/solr_username.key
               # Add more secret key files here
               git add -f /var/www/html/private/\*.key
