POWR-800 update path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,7 +177,7 @@ behat_tests: &behat_tests
               echo $SOLR_CORE > private/solr-config/solr_core.key
               echo $SOLR_HOST > private/solr-config/solr_host.key
               echo $SOLR_CSOLR_PASSWORDORE > private/solr-config/solr_password.key
-              echo $SOLR_USERNAME > ./solr-config/solr_username.key
+              echo $SOLR_USERNAME > private/solr-config/solr_username.key
               # Add more secret key files here
               git add -f /var/www/html/private/\*.key
             fi
