POWR-800 Change solr conf folder name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,10 +174,10 @@ behat_tests: &behat_tests
               terminus multidev:create portlandor.test $CIRCLE_BRANCH
               # Use environment varialbes to set the secrets and add to git.
               echo $SENDGRID_API_KEY > private/sendgrid_api.key
-              echo $SOLR_CORE > private/solr-config/solr_core.key
-              echo $SOLR_HOST > private/solr-config/solr_host.key
-              echo $SOLR_CSOLR_PASSWORDORE > private/solr-config/solr_password.key
-              echo $SOLR_USERNAME > private/solr-config/solr_username.key
+              echo $SOLR_CORE > private/solr-conf/solr_core.key
+              echo $SOLR_HOST > private/solr-conf/solr_host.key
+              echo $SOLR_PASSWORD > private/solr-conf/solr_password.key
+              echo $SOLR_USERNAME > private/solr-conf/solr_username.key
               # Add more secret key files here
               git add -f /var/www/html/private/\*.key
             fi
