--- a/web/sites/default/config/key.key.sendgrid_api.yml
+++ b/web/sites/default/config/key.key.sendgrid_api.yml
@@ -10,6 +10,6 @@ key_type_settings: {  }
 key_provider: file
 key_provider_settings:
   file_location: ../private/sendgrid_api.key
-  strip_line_breaks: false
+  strip_line_breaks: true
 key_input: none
 key_input_settings: {  }
