POWR-800 Add keys in DEV too as we are using forced push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,6 +115,14 @@ behat_tests: &behat_tests
             echo "Deploy to Pantheon DEV site"
             # Set the connection type to GIT
             terminus connection:set portlandor.dev git
+            # Use environment varialbes to set the secrets and add to git.
+            echo $SENDGRID_API_KEY > private/sendgrid_api.key
+            echo $SOLR_CORE > private/solr-conf/solr_core.key
+            echo $SOLR_HOST > private/solr-conf/solr_host.key
+            echo $SOLR_PASSWORD > private/solr-conf/solr_password.key
+            echo $SOLR_USERNAME > private/solr-conf/solr_username.key
+            # Add more secret key files here
+            git add -f /var/www/html/private/\*.key
             git commit -m "CircleCI deployment" --quiet
             git push -f pantheon master
             # TODO: Sanitize DB here
