POWR-742 removed custom alerts module, added page view

--- a/web/sites/default/config/core.entity_view_display.node.alert.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.node.alert.field_severity
     - node.type.alert
   module:
-    - options
     - panelizer
     - text
     - user
@@ -23,19 +22,13 @@ bundle: alert
 mode: default
 content:
   field_body_content:
-    weight: 1
-    label: above
+    weight: 0
+    label: visually_hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_severity:
-    weight: 0
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
 hidden:
   content_moderation_control: true
+  field_severity: true
   links: true
