--- a/web/sites/default/config/core.entity_view_display.node.alert.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.teaser.yml
@@ -4,24 +4,32 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.alert.field_body_content
     - field.field.node.alert.field_severity
     - node.type.alert
   module:
+    - panelizer
+    - text
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.alert.teaser
 targetEntityType: node
 bundle: alert
 mode: teaser
 content:
-  content_moderation_control:
-    weight: -20
-    settings: {  }
-    third_party_settings: {  }
+  field_body_content:
+    type: text_default
+    weight: 0
     region: content
-  links:
-    weight: 100
-    region: content
+    label: visually_hidden
     settings: {  }
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_severity: true
+  links: true
