--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.storage.node.field_severity
     - field.storage.node.field_summary
     - node.type.alert
-    - system.menu.main
     - workflows.workflow.editorial
   module:
     - content_moderation
@@ -17,7 +16,7 @@ dependencies:
     - options
     - user
 id: alerts
-label: Alerts
+label: 'Alerts block'
 module: views
 description: 'Site level alerts displayed on all pages.'
 tag: ''
@@ -628,39 +627,6 @@ display:
       defaults:
         style: true
         row: true
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - 'user.node_grants:view'
-        - user.permissions
-      tags:
-        - 'config:field.storage.node.field_action_link'
-        - 'config:field.storage.node.field_severity'
-        - 'config:field.storage.node.field_summary'
-        - 'config:workflow_list'
-        - extensions
-  page_1:
-    display_plugin: page
-    id: page_1
-    display_title: Page
-    position: 1
-    display_options:
-      display_extenders: {  }
-      path: alerts
-      menu:
-        type: normal
-        title: Alerts
-        description: ''
-        expanded: false
-        parent: ''
-        weight: -48
-        context: '0'
-        menu_name: main
-      css_class: always-show
-      defaults:
-        css_class: false
     cache_metadata:
       max-age: -1
       contexts:
