POWR-800 Add all solr key files in rsync

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,15 +202,18 @@ behat_tests: &behat_tests
               terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 60s
             fi
 
-            terminus connection:set portlandor.$CIRCLE_BRANCH sftp
+            terminus connection:set $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH sftp
             # Use environment varialbes to set the secrets and add to git.
             echo $SENDGRID_API_KEY > private/sendgrid_api.key
             terminus rsync private/sendgrid_api.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/
             echo $SOLR_CORE > private/solr-conf/solr_core.key
             terminus rsync private/solr-conf/solr_core.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/solr-conf/
             echo $SOLR_HOST > private/solr-conf/solr_host.key
+            terminus rsync private/solr-conf/solr_host.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/solr-conf/
             echo $SOLR_PASSWORD > private/solr-conf/solr_password.key
+            terminus rsync private/solr-conf/solr_password.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/solr-conf/
             echo $SOLR_USERNAME > private/solr-conf/solr_username.key
+            terminus rsync private/solr-conf/solr_username.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/solr-conf/
             # Add more secret key files here
 
             # Clear cache. Import config files
