--- a/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
@@ -1,8 +1,9 @@
-uuid: 8408f949-3466-4c63-af35-91b46361af70
+uuid: edb6bcb1-a7db-4ec3-a7a5-d42dad923af5
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.featured
     - field.field.node.city_service.field_audience
     - field.field.node.city_service.field_community_actions
     - field.field.node.city_service.field_group
@@ -38,10 +39,10 @@ third_party_settings:
         - field_summary
         - field_time_to_complete
         - field_service_mode
-id: node.city_service.default
+id: node.city_service.featured
 targetEntityType: node
 bundle: city_service
-mode: default
+mode: featured
 content:
   field_service_mode:
     type: entity_reference_revisions_entity_view
