--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -7,16 +7,17 @@ dependencies:
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
+    - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
+    - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
     - text
     - user
@@ -35,26 +36,17 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - field_featured_media
         - field_summary
         - field_body_content
-        - field_body
 id: node.news.default
 targetEntityType: node
 bundle: news
 mode: default
 content:
-  field_body:
-    type: entity_reference_revisions_entity_view
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
   field_body_content:
     type: text_default
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings: {  }
@@ -67,8 +59,24 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-  field_summary:
+  field_featured_media:
+    type: entity_reference_entity_view
     weight: 0
+    region: content
+    label: hidden
+    settings:
+      view_mode: embedded_100
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_summary:
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -105,11 +113,13 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_body: true
   field_feature_this_content: true
   field_feature_until: true
   field_group: true
   field_legacy_path: true
   field_published_on: true
+  field_related_content: true
   field_reviewer: true
   field_topics: true
   links: true
