--- a/web/sites/default/config/block.block.views_block__related_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__related_block_1.yml
@@ -1,4 +1,4 @@
-uuid: 43c0303a-0112-4cd4-bd68-a8e1b6e5909c
+uuid: f414526d-c455-4964-9922-631d8ca48b85
 langcode: en
 status: true
 dependencies:
@@ -10,10 +10,10 @@ dependencies:
     - views
   theme:
     - cloudy
-id: cloudy_views_block__related_block_1
+id: views_block__related_block_1
 theme: cloudy
 region: content
-weight: 5
+weight: 2
 provider: null
 plugin: 'views_block:related-block_1'
 settings:
@@ -22,7 +22,7 @@ settings:
   provider: views
   label_display: visible
   views_label: ''
-  items_per_page: none
+  items_per_page: '5'
   context_mapping: {  }
 visibility:
   'entity_bundle:node':
