--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -4,8 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.page.field_audience
-    - field.field.node.page.field_group
     - field.field.node.page.field_body_content
+    - field.field.node.page.field_featured_media
+    - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
     - field.field.node.page.field_related_content
@@ -15,8 +16,10 @@ dependencies:
     - node.type.page
   module:
     - chosen_field
+    - conditional_fields
     - content_moderation
     - maxlength
+    - media_library
     - path
     - text
 id: node.page.default
@@ -26,7 +29,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 11
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -37,21 +40,44 @@ content:
     type: chosen_select
     region: content
   field_body_content:
-    weight: 5
+    weight: 7
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
     region: content
+  field_featured_media:
+    type: media_library_widget
+    weight: 6
+    settings: {  }
+    region: content
+    third_party_settings:
+      conditional_fields:
+        39d4d0cc-92f5-4130-91d0-201d4ad4302c:
+          dependee: field_feature_this_content
+          settings:
+            state: visible
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: node
+          bundle: page
   field_group:
-    weight: 9
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 7
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -65,7 +91,7 @@ content:
     type: options_select
     region: content
   field_related_content:
-    weight: 6
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -74,7 +100,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 12
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -103,13 +129,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 13
+    weight: 16
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -126,7 +152,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 10
+    weight: 13
     region: content
     settings:
       match_operator: CONTAINS
@@ -134,7 +160,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 9
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
