--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -43,8 +43,8 @@ third_party_settings:
         - field_start_date
         - field_end_date
         - group_date_and_time
-        - field_all_day
         - group_start_to_end_time
+        - field_all_day
         - field_event_location
         - field_start_time
         - field_summary
@@ -230,14 +230,6 @@ content:
             lb-col: false
             classes: {  }
     region: content
-  field_reviewer:
-    weight: 7
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_start_date:
     weight: 0
     label: hidden
@@ -352,4 +344,5 @@ hidden:
   field_body: true
   field_group: true
   field_legacy_path: true
+  field_reviewer: true
   links: true
