--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
+    - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
@@ -46,7 +47,7 @@ third_party_settings:
         - node_title
         - field_summary
       second:
-        - field_featured_image
+        - field_featured_media
     fields:
       node_title:
         plugin_id: node_title
@@ -68,6 +69,22 @@ targetEntityType: node
 bundle: news
 mode: featured
 content:
+  field_featured_media:
+    type: entity_reference_entity_view
+    weight: 2
+    region: second
+    label: hidden
+    settings:
+      view_mode: embedded_100
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     weight: 1
     label: hidden
@@ -76,32 +93,11 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis: true
-            fis-el: p
-            fis-cl: order-3
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
+            classes: {  }
     type: string
     region: first
 hidden:
