--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.page.field_audience
     - field.field.node.page.field_body_content
+    - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
@@ -33,107 +34,44 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_page_type
-        - field_summary
+        - field_featured_media
         - field_body_content
-        - field_related_content
 id: node.page.default
 targetEntityType: node
 bundle: page
 mode: default
 content:
   field_body_content:
-    weight: 2
+    weight: 1
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_page_type:
+  field_featured_media:
     weight: 0
     label: hidden
     settings:
+      view_mode: embedded_100
       link: false
     third_party_settings:
       ds:
         ft:
-          id: expert
+          id: default
           settings:
             lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: div
-            fi-cl: 'badge badge-pill badge-light mb-1 order-1 align-self-start'
-            fi-at: ''
-            suffix: ''
-            lbw: false
             lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
-    type: entity_reference_label
-    region: content
-  field_related_content:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_summary:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
-    type: string
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
 hidden:
   content_moderation_control: true
   field_audience: true
   field_group: true
   field_legacy_path: true
+  field_page_type: true
+  field_related_content: true
   field_reviewer: true
+  field_summary: true
   field_topics: true
   links: true
