--- a/web/sites/default/config/field.field.node.news.field_related_content.yml
+++ b/web/sites/default/config/field.field.node.news.field_related_content.yml
@@ -1,4 +1,4 @@
-uuid: ae5a0ef3-eba2-4139-ac42-9584dc49225d
+uuid: 75f4b759-029d-40bd-a860-9659e88b1fb0
 langcode: en
 status: true
 dependencies:
@@ -17,10 +17,10 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.city_service.field_related_content
+id: node.news.field_related_content
 field_name: field_related_content
 entity_type: node
-bundle: city_service
+bundle: news
 label: 'Related content'
 description: 'Start typing the title of content that is related and the field will autocomplete based on a partial match. This content will appear in a "Related" section. This is a one-way relationship for this content only. If you want the relationship to be reciprocal, add it to the other content as well.'
 required: false
@@ -41,5 +41,5 @@ settings:
     sort:
       field: _none
     auto_create: false
-    auto_create_bundle: guide
+    auto_create_bundle: city_service
 field_type: entity_reference
