--- a/web/sites/default/config/views.view.related.yml
+++ b/web/sites/default/config/views.view.related.yml
@@ -2,6 +2,8 @@ uuid: 3b9cebcf-2991-4aab-b30e-f6ed80789cfa
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.node.field_related_content
   module:
     - node
     - user
@@ -48,22 +50,26 @@ display:
       pager:
         type: none
         options:
-          items_per_page: null
           offset: 0
       style:
         type: default
         options:
           grouping: {  }
           row_class: ''
-          default_row_class: true
+          default_row_class: false
       row:
         type: fields
+        options:
+          default_field_elements: false
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          relationship: field_related_content
+        field_related_content:
+          id: field_related_content
+          table: node__field_related_content
+          field: field_related_content
+          relationship: none
           group_type: group
           admin_label: ''
           label: ''
@@ -107,18 +113,18 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: value
-          type: string
+          click_sort_column: target_id
+          type: entity_reference_entity_view
           settings:
-            link_to_entity: true
-          group_column: value
+            view_mode: featured
+          group_column: target_id
           group_columns: {  }
           group_rows: true
           delta_limit: 0
           delta_offset: 0
           delta_reversed: false
           delta_first_last: false
-          multi_type: separator
+          multi_type: ul
           separator: ', '
           field_api_classes: false
           plugin_id: field
@@ -127,7 +133,7 @@ display:
           id: status
           table: node_field_data
           field: status
-          relationship: field_related_content
+          relationship: none
           group_type: group
           admin_label: ''
           operator: '='
@@ -158,24 +164,25 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          plugin_id: boolean
           entity_type: node
           entity_field: status
+          plugin_id: boolean
       sorts: {  }
       title: Related
       header: {  }
       footer: {  }
       empty: {  }
       relationships:
-        field_related_content:
-          id: field_related_content
-          table: node__field_related_content
-          field: field_related_content
+        reverse__node__field_related_content:
+          id: reverse__node__field_related_content
+          table: node_field_data
+          field: reverse__node__field_related_content
           relationship: none
           group_type: group
-          admin_label: 'field_related_content: Content'
-          required: true
-          plugin_id: standard
+          admin_label: field_related_content
+          required: false
+          entity_type: node
+          plugin_id: entity_reverse
       arguments:
         nid:
           id: nid
@@ -214,6 +221,9 @@ display:
           entity_field: nid
           plugin_id: node_nid
       display_extenders: {  }
+      filter_groups:
+        operator: AND
+        groups: {  }
     cache_metadata:
       max-age: -1
       contexts:
@@ -222,7 +232,9 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_related_content'
+        - extensions
   block_1:
     display_plugin: block
     id: block_1
@@ -231,6 +243,8 @@ display:
     display_options:
       display_extenders: {  }
       block_hide_empty: true
+      allow:
+        items_per_page: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -239,4 +253,6 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_related_content'
+        - extensions
