POWR-791 - partially completed. Updated paragraphs to use embedded media browsers and Media Library entity view mode. New prototype image grid entity browser. Style updates, moved styles into new entity browser component. New thumbnail image style.

--- a/web/sites/default/config/core.entity_form_display.paragraph.document.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.document.default.yml
@@ -3,11 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.document_browser
+    - entity_browser.browser.document_browser_embed
     - field.field.paragraph.document.field_document
     - paragraphs.paragraphs_type.document
   module:
-    - content_moderation
     - entity_browser
 id: paragraph.document.default
 targetEntityType: paragraph
@@ -17,12 +16,13 @@ content:
   field_document:
     weight: 1
     settings:
-      entity_browser: document_browser
+      entity_browser: document_browser_embed
       field_widget_display: label
       field_widget_remove: true
       open: true
       selection_mode: selection_append
       field_widget_edit: false
+      field_widget_replace: false
       field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
