--- a/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.image.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_table_browser
+    - entity_browser.browser.image_browser_embed
     - field.field.paragraph.image.field_caption
     - field.field.paragraph.image.field_image
     - field.field.paragraph.image.field_image_alignment
@@ -33,7 +33,7 @@ content:
     type: entity_browser_entity_reference
     weight: 0
     settings:
-      entity_browser: image_table_browser
+      entity_browser: image_browser_embed
       field_widget_display: rendered_entity
       field_widget_remove: true
       open: true
