--- a/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.video.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.video_browser
+    - entity_browser.browser.audio_video_browser_embed
     - field.field.paragraph.video.field_caption
     - field.field.paragraph.video.field_video
     - field.field.paragraph.video.field_video_alignment
@@ -33,13 +33,13 @@ content:
     type: entity_browser_entity_reference
     weight: 0
     settings:
-      entity_browser: video_browser
+      entity_browser: audio_video_browser_embed
       field_widget_display: rendered_entity
       field_widget_remove: true
       open: true
       selection_mode: selection_append
       field_widget_display_settings:
-        view_mode: embedded
+        view_mode: media_library
       field_widget_edit: false
       field_widget_replace: false
     region: content
