--- a/web/sites/default/config/entity_browser.browser.image_browser_embed.yml
+++ b/web/sites/default/config/entity_browser.browser.image_browser_embed.yml
@@ -16,14 +16,19 @@ display_configuration:
   link_text: 'Select image'
   auto_open: true
 selection_display: no_display
-selection_display_configuration: {  }
+selection_display_configuration:
+  entity_type: node
+  display: label
+  display_settings: {  }
+  select_text: 'Use selected'
+  selection_hidden: 0
 widget_selector: tabs
 widget_selector_configuration: {  }
 widgets:
   589097e1-a457-4d19-bf4e-fcde33ddc9a8:
     settings:
       view: media
-      view_display: image_table_browser
+      view_display: entity_browser_1
       submit_text: 'Select image'
       auto_select: false
     uuid: 589097e1-a457-4d19-bf4e-fcde33ddc9a8
