--- a/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
@@ -4,11 +4,13 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.media_library
+    - field.field.media.image.field_group
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
     - media.type.image
     - responsive_image.styles.paragraph_image
   module:
+    - ds
     - responsive_image
 _core:
   default_config_hash: VLDxfMVPTkd2xvOjFMCh3kWmaOYnd03zggFXuUXQVEY
@@ -24,7 +26,14 @@ content:
     settings:
       responsive_image_style: paragraph_image
       image_link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
   name:
     type: string
