POWR-765 remove featured image config

--- a/web/sites/default/config/core.entity_view_display.node.guide.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.featured.yml
@@ -1,6 +1,6 @@
 uuid: 9bd2614d-6ddd-438e-bcca-d79496e63b1d
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.featured
