--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -1,6 +1,6 @@
 uuid: 809179c8-a318-4159-98b5-ba9717dedec7
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.featured
@@ -8,10 +8,10 @@ dependencies:
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
-    - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
+    - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
@@ -69,22 +69,6 @@ targetEntityType: node
 bundle: news
 mode: featured
 content:
-  field_featured_media:
-    type: entity_reference_entity_view
-    weight: 2
-    region: second
-    label: hidden
-    settings:
-      view_mode: embedded_100
-      link: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
   field_summary:
     weight: 1
     label: hidden
@@ -109,6 +93,7 @@ hidden:
   field_group: true
   field_legacy_path: true
   field_published_on: true
+  field_related_content: true
   field_reviewer: true
   field_topics: true
   links: true
