--- a/web/sites/default/config/core.entity_view_display.node.news.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.related.yml
@@ -1,9 +1,9 @@
-uuid: 809179c8-a318-4159-98b5-ba9717dedec7
+uuid: 9f6872e6-4e1c-401d-92e7-a346589b5d60
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.featured
+    - core.entity_view_mode.node.related
     - field.field.node.news.field_body
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
@@ -28,26 +28,15 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_featured-with-image
-      library: null
+      id: layout_onecol
+      library: layout_discovery/onecol
       disable_css: false
       entity_classes: all_classes
-      settings:
-        wrappers:
-          first: div
-          second: div
-        outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
-        link_custom: ''
-        classes:
-          layout_class: {  }
+      settings: {  }
     regions:
-      first:
+      content:
         - node_title
         - field_summary
-      second:
-        - field_featured_media
     fields:
       node_title:
         plugin_id: node_title
@@ -64,10 +53,10 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: node.news.featured
+id: node.news.related
 targetEntityType: node
 bundle: news
-mode: featured
+mode: related
 content:
   field_summary:
     weight: 1
@@ -77,13 +66,34 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: expert
           settings:
             lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis: true
+            fis-el: p
+            fis-cl: lead
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
             lb-col: false
-            classes: {  }
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
     type: string
-    region: first
+    region: content
 hidden:
   content_moderation_control: true
   field_body: true
