POWR-765 add related display modes

--- a/web/sites/default/config/core.entity_view_display.node.page.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.related.yml
@@ -1,21 +1,19 @@
-uuid: 9f6872e6-4e1c-401d-92e7-a346589b5d60
+uuid: caf39fc4-5606-477d-8928-f23fea1e6877
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_view_mode.node.related
-    - field.field.node.news.field_body
-    - field.field.node.news.field_body_content
-    - field.field.node.news.field_feature_this_content
-    - field.field.node.news.field_feature_until
-    - field.field.node.news.field_group
-    - field.field.node.news.field_legacy_path
-    - field.field.node.news.field_published_on
-    - field.field.node.news.field_related_content
-    - field.field.node.news.field_reviewer
-    - field.field.node.news.field_summary
-    - field.field.node.news.field_topics
-    - node.type.news
+    - field.field.node.page.field_audience
+    - field.field.node.page.field_body_content
+    - field.field.node.page.field_group
+    - field.field.node.page.field_legacy_path
+    - field.field.node.page.field_page_type
+    - field.field.node.page.field_related_content
+    - field.field.node.page.field_reviewer
+    - field.field.node.page.field_summary
+    - field.field.node.page.field_topics
+    - node.type.page
   module:
     - ds
     - panelizer
@@ -52,20 +50,18 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: node.news.related
+id: node.page.related
 targetEntityType: node
-bundle: news
+bundle: page
 mode: related
 content: {  }
 hidden:
   content_moderation_control: true
-  field_body: true
+  field_audience: true
   field_body_content: true
-  field_feature_this_content: true
-  field_feature_until: true
   field_group: true
   field_legacy_path: true
-  field_published_on: true
+  field_page_type: true
   field_related_content: true
   field_reviewer: true
   field_summary: true
