--- a/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
@@ -18,7 +18,6 @@ dependencies:
     - node.type.city_service
   module:
     - ds
-    - entity_reference_revisions
     - panelizer
     - user
 third_party_settings:
@@ -36,67 +35,28 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_summary
-        - field_time_to_complete
-        - field_service_mode
+        - node_title
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.city_service.related
 targetEntityType: node
 bundle: city_service
 mode: related
-content:
-  field_service_mode:
-    type: entity_reference_revisions_entity_view
-    weight: 2
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
-  field_summary:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi-def-at: false
-    type: string
-    region: content
-  field_time_to_complete:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
+content: {  }
 hidden:
   content_moderation_control: true
   field_audience: true
@@ -106,6 +66,9 @@ hidden:
   field_popular: true
   field_related_content: true
   field_reviewer: true
+  field_service_mode: true
+  field_summary: true
+  field_time_to_complete: true
   field_topics: true
   links: true
   scheduled_publication: true
