--- a/web/sites/default/config/views.view.related.yml
+++ b/web/sites/default/config/views.view.related.yml
@@ -116,7 +116,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_view
           settings:
-            view_mode: featured
+            view_mode: related
           group_column: target_id
           group_columns: {  }
           group_rows: true
