POWR-791 - enabled sticky select button for entity browsers, removed two obsolete image entity browsers

--- a/web/sites/default/config/core.entity_form_display.paragraph.audio.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.audio.default.yml
@@ -39,7 +39,7 @@ content:
       open: true
       selection_mode: selection_append
       field_widget_display_settings:
-        view_mode: media_library
+        view_mode: embedded
       field_widget_edit: false
       field_widget_replace: false
     region: content
