POWR-800 Use config split to manage solr key.

--- a/web/sites/default/config/config_split.config_split.config_dev.yml
+++ b/web/sites/default/config/config_split.config_split.config_dev.yml
@@ -6,9 +6,7 @@ id: config_dev
 label: 'Development Modules'
 description: 'Modules that should only be enabled in development environments.'
 folder: sites/default/config_dev
-module:
-  devel: 0
-  kint: 0
+module: {  }
 theme: {  }
 blacklist: {  }
 graylist: {  }
