--- a/web/sites/default/config/config_split.config_split.config_prod.yml
+++ b/web/sites/default/config/config_split.config_split.config_prod.yml
@@ -9,7 +9,8 @@ folder: sites/default/config_prod
 module: {  }
 theme: {  }
 blacklist: {  }
-graylist: {  }
+graylist:
+  - key.key.solr_core
 graylist_dependents: true
 graylist_skip_equal: true
 weight: 0
