POWR-765 Update related view block to display related content correctly

--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -1,4 +1,4 @@
-uuid: 27b1d5a0-493e-4ded-9a22-d3cdf373865d
+uuid: 0aa8529c-5b13-446f-be52-0073f136aa5b
 langcode: en
 status: true
 dependencies:
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.event.field_event_location
     - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
+    - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
@@ -20,7 +21,6 @@ dependencies:
   module:
     - datetime
     - ds
-    - entity_reference_revisions
     - field_group
     - panelizer
     - time_field
@@ -41,15 +41,13 @@ third_party_settings:
     regions:
       content:
         - node_title
-        - field_all_day
         - field_start_date
-        - group_start_to_end_time
-        - field_start_time
-        - field_end_date
-        - field_end_time
         - group_date_and_time
-        - field_event_location
-        - field_summary
+        - field_end_date
+        - group_start_to_end_time
+        - field_all_day
+        - field_start_time
+        - field_end_time
     fields:
       node_title:
         plugin_id: node_title
@@ -72,7 +70,7 @@ third_party_settings:
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 2
+      weight: 1
       format_type: html_element
       format_settings:
         label: 'Start to end date'
@@ -92,7 +90,7 @@ third_party_settings:
         - field_start_time
         - field_end_time
       parent_name: ''
-      weight: 1
+      weight: 2
       format_type: html_element
       format_settings:
         label: 'Start to end time'
@@ -113,7 +111,7 @@ mode: related
 content:
   field_all_day:
     type: boolean
-    weight: 0
+    weight: 3
     region: content
     label: hidden
     settings:
@@ -187,7 +185,7 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 2
+    weight: 5
     label: hidden
     settings:
       time_format: '\t\o g:i A'
@@ -221,23 +219,6 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: time_formatter
-    region: content
-  field_event_location:
-    type: entity_reference_revisions_entity_view
-    weight: 3
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
     region: content
   field_start_date:
     weight: 0
@@ -277,7 +258,7 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 1
+    weight: 4
     label: hidden
     settings:
       time_format: 'g:i A'
@@ -312,47 +293,14 @@ content:
             fi-def-at: false
     type: time_formatter
     region: content
-  field_summary:
-    weight: 4
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow-el: ''
-            ow-cl: ''
-            ow-at: ''
-            fis: true
-            fis-el: p
-            fis-cl: lead
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
-    type: string
-    region: content
 hidden:
   content_moderation_control: true
   field_body: true
   field_body_content: true
+  field_event_location: true
   field_group: true
   field_legacy_path: true
+  field_related_content: true
   field_reviewer: true
+  field_summary: true
   links: true
