--- a/web/sites/default/config/views.view.related.yml
+++ b/web/sites/default/config/views.view.related.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.related
     - field.storage.node.field_related_content
   module:
     - node
@@ -58,12 +59,10 @@ display:
           row_class: ''
           default_row_class: false
       row:
-        type: fields
+        type: 'entity:node'
         options:
-          default_field_elements: false
-          inline: {  }
-          separator: ''
-          hide_empty: false
+          relationship: none
+          view_mode: related
       fields:
         field_related_content:
           id: field_related_content
@@ -180,15 +179,15 @@ display:
           relationship: none
           group_type: group
           admin_label: field_related_content
-          required: false
+          required: true
           entity_type: node
           plugin_id: entity_reverse
       arguments:
-        nid:
-          id: nid
+        nid_1:
+          id: nid_1
           table: node_field_data
           field: nid
-          relationship: none
+          relationship: reverse__node__field_related_content
           group_type: group
           admin_label: ''
           default_action: default
