--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.event.field_event_location
     - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
+    - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
@@ -229,6 +230,14 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+    region: content
+  field_related_content:
+    weight: 7
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_start_date:
     weight: 0
