--- a/web/sites/default/config/config_split.config_split.config_prod.yml
+++ b/web/sites/default/config/config_split.config_split.config_prod.yml
@@ -8,9 +8,9 @@ description: 'Modules that should only be enabled in production (and not in prep
 folder: sites/default/config_prod
 module: {  }
 theme: {  }
-blacklist: {  }
-graylist:
+blacklist:
   - key.key.solr_core
+graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
 weight: 0
